# barter-data-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
data/2022-10-22UTC/: stream_dump_coinbase_(eth_usd, spot)_20221022_015850.json
examples/: bybit_public_trades_streams.rs  candles_streams.rs  coinbase_orderbook_l3_stream.rs  dynamic_multi_stream_multi_exchange.rs  multi_exchange_market_streams.rs  multi_stream_multi_exchange.rs  order_books_l1_streams.rs  order_books_l1_streams_multi_exchange.rs  order_books_l2_streams.rs  orderbook_printer.rs  public_liquidation_streams.rs  public_trades_streams.rs  public_trades_streams_multi_exchange.rs
src/: book.rs  builder.rs  connection.rs  error.rs  event.rs  explore.rs  instrument.rs  lib.rs  lib_new.rs  model.rs  orderbook.rs  shutdown.rs  util.rs
src/binance/: futures.rs  mod.rs
src/client/: binance.rs  bitstamp.rs  mod.rs
src/exchange/: mod.rs  subscription.rs
src/exchange/binance/: book.rs  channel.rs  futures.rs  market.rs  mod.rs  model.rs  subscription.rs  trade.rs
src/exchange/binance/book/: l1.rs  l2.rs  mod.rs  transformer.rs
src/exchange/binance/domain/: mod.rs  subscription.rs  trade.rs
src/exchange/binance/futures/: book.rs  explore.rs  l2.rs  liquidation.rs  mod.rs  trade.rs
src/exchange/binance/spot/: l2.rs  mod.rs
src/exchange/binance_paper/: mod.rs  trade.rs
src/exchange/binance_paper/book/: l1.rs  l2.rs
src/exchange/binance_paper/spot/: mod.rs
src/exchange/bitfinex/: channel.rs  market.rs  message.rs  mod.rs  model.rs  subscription.rs  trade.rs  validator.rs
src/exchange/bitfinex/domain/: mod.rs  subscription.rs
src/exchange/bitmex/: channel.rs  market.rs  message.rs  mod.rs  subscription.rs  trade.rs
src/exchange/bybit/: candle.rs  channel.rs  liquidation.rs  market.rs  message.rs  mod.rs  subscription.rs  trade.rs
src/exchange/bybit/futures/: mod.rs
src/exchange/bybit/spot/: mod.rs
src/exchange/coinbase/: channel.rs  error.rs  market.rs  mod.rs  model.rs  subscription.rs  trade.rs
src/exchange/coinbase/domain/: mod.rs  subscription.rs  trade.rs
src/exchange/coinbase/pro/: mod.rs
src/exchange/deribit/: channel.rs  market.rs  message.rs  mod.rs  request.rs  subscription.rs  trade.rs
src/exchange/ftx/: mod.rs  model.rs
src/exchange/gateio/: channel.rs  market.rs  message.rs  mod.rs  subscription.rs
src/exchange/gateio/domain/: mod.rs  subscription.rs
src/exchange/gateio/future/: mod.rs
src/exchange/gateio/futures/: mod.rs  trade.rs
src/exchange/gateio/option/: mod.rs
src/exchange/gateio/perpetual/: mod.rs  trade.rs
src/exchange/gateio/spot/: mod.rs  trade.rs
src/exchange/kraken/: channel.rs  market.rs  message.rs  mod.rs  model.rs  subscription.rs  trade.rs
src/exchange/kraken/book/: l1.rs
src/exchange/kraken/domain/: mod.rs  subscription.rs  trade.rs
src/exchange/kraken_futures/: mod.rs  model.rs
src/exchange/kraken_paper/: channel.rs  mod.rs
src/exchange/kucoin/: mod.rs  model.rs
src/exchange/okx/: channel.rs  market.rs  mod.rs  subscription.rs  trade.rs
src/exchange/poloniex/: channel.rs  market.rs  message.rs  mod.rs  subscription.rs  trade.rs
src/model/: mod.rs  orderbook.rs  subscription.rs
src/streams/: builder.rs  consumer.rs  mod.rs
src/streams/builder/: dynamic.rs  mod.rs  multi.rs
src/subscriber/: mapper.rs  mod.rs  subscription.rs  validator.rs
src/subscriber/subscription/: book.rs  candle.rs  exchange.rs  liquidation.rs  mod.rs  trade.rs
src/subscription/: book.rs  candle.rs  liquidation.rs  mod.rs  trade.rs
src/transformer/: book.rs  mod.rs  stateless.rs
src/transformer/book/: mod.rs  multi.rs
testing/: Coinbase_full_channel_market_event.sample  Coinbase_orderbook_snapshot_sample.json
(+14 files in other folders)
