[package]
name = "barter-data"
version = "0.5.9"
authors = ["keirbailey <keirinvestment@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/barter-data/"
repository = "https://github.com/barter-rs/barter-data-rs"
readme = "README.md"
description = "High performance & normalised WebSocket intergration for leading cryptocurrency exchanges - batteries included."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Barter Ecosystem
barter-integration = "0.4.0"

# Logging
tracing = "0.1.36"

# Async
tokio = { version = "1.20.1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
futures = "0.3.21"
async-trait = "0.1.57"

# Error
thiserror = "1.0.32"
anyhow = "1.0.65"

# SerDe
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

# Strategy
ta = "0.5.0"

# Misc
chrono = {version = "0.4.21", features = ["serde"]}
reqwest = "0.11.12"
# reqwest = { version = "0.11.1", features = ["json", "rustls-tls"] }
rand = "0.8.5"
approx = "0.5.1"

# To be removed
round = "0.1.2"
ordered-float = "3.2.0"
hmac = "0.7.1"
sha2 = "0.8.1"
base64 = "0.12.0"